--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookmark</title>
     <link rel="stylesheet" href="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,18 +16,21 @@
     <!--Bookmarks-->
     <div class="container" id="bookmarks-container">
         <div class="item">
+            <i class="fa-solid fa-trash" id="delete-bookmark" title="Delete bookmark"></i>
             <div class="name">
                 <img src="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design" alt="Favicon">
                 <a href="htts://jacinto.design" target="_blank">Jacinto design</a>
             </div>
         </div>
         <div class="item">
+            <i class="fa-solid fa-trash" id="delete-bookmark" title="Delete bookmark"></i>
             <div class="name">
                 <img src="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design" alt="Favicon">
                 <a href="htts://jacinto.design" target="_blank">Jacinto design</a>
             </div>
         </div>
         <div class="item">
+            <i class="fa-solid fa-trash" id="delete-bookmark" title="Delete bookmark"></i>
             <div class="name">
                 <img src="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design" alt="Favicon">
                 <a href="htts://jacinto.design" target="_blank">Jacinto design</a>
