--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
         </div>
     </div>
 
+    <!--Modal-->
+    <div class="modal-container show-moodal" id="modal">
+        <div class="modal">
+            <i class="fas fa-times close-icon" id="close-modal"></i>
+            <div class="modal-header">
+                <h3>Add bookmark</h3>
+            </div>
+            <div class="modal-content">
+                <form id="bookmark-form">
+                    <!--website name-->
+                    <div class="form-group">
+                        <label for="website-name" class="form-label">Website name</label>
+                        <input type="text" class="form-input" id="website-name">
+                    </div>
+                    <!--website URL-->
+                    <div class="form-group">
+                        <label for="website-url" class="form-label">Website URL</label>
+                        <input type="text" class="form-input" id="website-url">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
