--- a/index.html
+++ b/index.html
@@ -14,29 +14,7 @@
     <h1 id="show-modal">Add bookmark</h1>
 
     <!--Bookmarks-->
-    <div class="container" id="bookmarks-container">
-        <div class="item">
-            <i class="fa-solid fa-trash" id="delete-bookmark" title="Delete bookmark"></i>
-            <div class="name">
-                <img src="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design" alt="Favicon">
-                <a href="htts://jacinto.design" target="_blank">Jacinto design</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fa-solid fa-trash" id="delete-bookmark" title="Delete bookmark"></i>
-            <div class="name">
-                <img src="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design" alt="Favicon">
-                <a href="htts://jacinto.design" target="_blank">Jacinto design</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fa-solid fa-trash" id="delete-bookmark" title="Delete bookmark"></i>
-            <div class="name">
-                <img src="https://s2.googleusercontent.com/s2/favicons?domain=www.jacinto.design" alt="Favicon">
-                <a href="htts://jacinto.design" target="_blank">Jacinto design</a>
-            </div>
-        </div>
-    </div>
+    <div class="container" id="bookmarks-container"></div>
 
     <!--Modal-->
     <div class="modal-container" id="modal">
